--- a/about.textile
+++ b/about.textile
@@ -7,6 +7,9 @@ h2. About Me (Bio)
 
 Matthew Deiters is a Software Architect at McKinsey & Company in San Francisco, CA.
 
-Matthew has been focusing on end-to-end software development and delivery of complex systems for nearly a decade. He is an active member of the agile and open source community and initially honed his agile skills while working for ThoughtWorks in the US and Australia. He has spoken at several conferences and is always looking to share his ideas with others.
+Matthew has been focusing on end-to-end software development and delivery for nearly a decade. He is in constant pursuit of simple innovative solutions to complex problems. He has also been an avid practitioner of agile and lean methodologies for the last 6 years after honing his skills while working for ThoughtWorks in the US and Australia. As an active member of the open source community, he has contributed to several projects as well as frequently speaks at conferences and user groups.
 
-In his spare time, Matt is a part time foodie enjoying cooking and drink plenty of wine. Having already visited more then 33 countries, he is always looking for somewhere new to explore.
+In his spare time, Matt is a amateur foodie enjoying cooking and drinking plenty of wine. Having already visited more then 33 countries, he is always looking for somewhere new to explore.
+
+
+
