my grammer is terrible

--- a/about.textile
+++ b/about.textile
@@ -9,7 +9,7 @@ Matthew Deiters is a Software Architect at McKinsey & Company in San Francisco, 
 
 Matthew has been focusing on end-to-end software development and delivery for nearly a decade. He is in constant pursuit of simple innovative solutions to complex problems. He has also been an avid practitioner of agile and lean methodologies for the last 6 years after honing his skills while working for ThoughtWorks in the US and Australia. As an active member of the open source community, he has contributed to several projects as well as frequently speaks at conferences and user groups.
 
-In his spare time, Matt is a amateur foodie enjoying cooking and drinking plenty of wine. Having already visited more then 33 countries, he is always looking for somewhere new to explore.
+In his spare time, Matt is an amateur foodie enjoying cooking and drinking plenty of wine. Having already visited more then 33 countries, he is always looking for somewhere new to explore.
 
 
 
